--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "cakephp/migrations": "@stable",
         "cakephp/plugin-installer": "^1.0",
         "friendsofcake/bootstrap-ui": "^1.4",
+        "fzaninotto/faker": "^1.9",
         "mobiledetect/mobiledetectlib": "2.*"
     },
     "require-dev": {
