--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "cakephp/plugin-installer": "^1.0",
         "friendsofcake/bootstrap-ui": "^1.4",
         "fzaninotto/faker": "^1.9",
+        "josegonzalez/cakephp-upload": "^4.0",
         "mobiledetect/mobiledetectlib": "2.*"
     },
     "require-dev": {
